--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:title" content="Muberra Ozmen" />
     <meta property="og:description" content="Machine Learning Researcher" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/placeholder.svg" />
+    <meta property="og:image" content="./public/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/public/placeholder.svg" />
+    <meta name="twitter:image" content="./public/placeholder.svg" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
